--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ body {
   font-family: 'Press Start 2P', cursive;
   color: #f9fafb;
   background:
-    linear-gradient(rgba(0,0,0,0.78), rgba(0,0,0,0.88)),
+    linear-gradient(rgba(0,0,0,0.8), rgba(0,0,0,0.9)),
     url("https://images.unsplash.com/photo-1511512578047-dfb367046420");
   background-size: cover;
   background-attachment: fixed;
@@ -51,66 +51,81 @@ body::before {
   100% { transform: translate(0); }
 }
 
-header {
-  padding: 90px 20px;
-  text-align: center;
+/* NAVBAR */
+nav {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  padding: 20px;
+  background: rgba(0,0,0,0.9);
   border-bottom: 2px solid cyan;
-  position: relative;
-  z-index: 2;
-}
-
-header h1 {
-  font-size: 2.6rem;
-  color: cyan;
-  text-shadow: 0 0 25px cyan;
-}
-
-header p {
-  margin-top: 20px;
-  font-size: 0.9rem;
-  color: #d1d5db;
+  z-index: 10;
+  text-align: center;
 }
 
 nav a {
-  color: magenta;
-  margin: 0 15px;
+  margin: 0 18px;
+  color: cyan;
   text-decoration: none;
-  text-shadow: 0 0 12px magenta;
+  text-shadow: 0 0 10px cyan;
 }
 
+/* SECTIONS */
 section {
-  padding: 100px 20px;
+  padding: 120px 20px;
   text-align: center;
   position: relative;
   z-index: 2;
 }
 
-h2 {
+h1, h2 {
   color: magenta;
   text-shadow: 0 0 15px magenta;
-  margin-bottom: 40px;
 }
 
-.about-text {
-  max-width: 950px;
-  margin: auto;
-  font-size: 1.05rem;
-  line-height: 2.3;
-  color: #e5e7eb;
-}
-
-/* Scroll animation */
 .reveal {
   opacity: 0;
-  transform: translateY(90px);
-  transition: all 1.2s ease;
+  transform: translateY(80px);
+  transition: all 1.1s ease;
 }
 .reveal.active {
   opacity: 1;
   transform: translateY(0);
 }
 
-/* Games layout */
+/* HERO */
+.hero {
+  padding-top: 180px;
+}
+.hero h1 {
+  font-size: 2.6rem;
+}
+.hero p {
+  margin-top: 30px;
+  color: #d1d5db;
+}
+
+/* ABOUT */
+.about-text {
+  max-width: 900px;
+  margin: auto;
+  font-size: 1.05rem;
+  line-height: 2.3;
+}
+
+/* TEAM */
+.team {
+  max-width: 900px;
+  margin: auto;
+}
+.member {
+  margin: 25px 0;
+}
+.member span {
+  color: cyan;
+}
+
+/* GAMES */
 .games {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -118,134 +133,109 @@ h2 {
   max-width: 1000px;
   margin: auto;
 }
-
 .game-center {
   grid-column: 1 / -1;
   display: flex;
   justify-content: center;
 }
-
-/* Cards */
 .card {
-  width: 100%;
   max-width: 420px;
-  background: rgba(0,0,0,0.78);
+  background: rgba(0,0,0,0.8);
   border: 2px solid cyan;
-  padding: 22px;
-  border-radius: 16px;
+  padding: 25px;
+  border-radius: 15px;
   box-shadow: 0 0 35px rgba(0,255,255,0.35);
   transition: transform 0.4s, box-shadow 0.4s;
 }
-
 .card:hover {
-  transform: translateY(-18px) scale(1.06);
+  transform: translateY(-18px) scale(1.05);
   box-shadow: 0 0 55px rgba(255,0,255,0.65);
 }
-
-.card img {
-  width: 100%;
-  height: 220px;
-  object-fit: cover;
-  border-radius: 10px;
-  margin-bottom: 18px;
-  border: 2px solid magenta;
-}
-
 .card h3 {
   color: cyan;
-  margin-bottom: 10px;
 }
 
-/* Team */
-.team span {
-  display: block;
-  margin: 16px 0;
-  color: cyan;
+/* CONTACT */
+.contact {
+  color: #d1d5db;
 }
 
+/* FOOTER */
 footer {
-  padding: 55px 20px;
+  padding: 40px;
   border-top: 2px solid cyan;
+  background: rgba(0,0,0,0.9);
   text-align: center;
-  background: rgba(0,0,0,0.88);
 }
 </style>
 </head>
 
 <body>
 
-<header>
+<nav>
+  <a href="#home">Home</a>
+  <a href="#about">About</a>
+  <a href="#team">Team</a>
+  <a href="#projects">Projects</a>
+  <a href="#contact">Contact</a>
+</nav>
+
+<section id="home" class="hero reveal">
   <h1>GAMEFORGE STUDIOS</h1>
-  <p>Neon pixels. Glitched realities. Hardcore gameplay.</p>
-  <nav>
-    <a href="#about">ABOUT</a>
-    <a href="#games">GAMES</a>
-    <a href="#team">CREATORS</a>
-    <a href="#contact">CONTACT</a>
-  </nav>
-</header>
+  <p>Forging neon-soaked, pixel-powered game worlds.</p>
+</section>
 
 <section id="about" class="reveal">
-  <h2>ABOUT US</h2>
+  <h2>About Us</h2>
   <p class="about-text">
-    GameForge Studios is a cyberpunk-inspired indie game collective driven by
-    a passion for pixel art, retro-futuristic worlds, and adrenaline-fueled
-    gameplay. We blend creativity with technology to craft experiences that
-    feel alive — fast, glitchy, challenging, and unforgettable for players.
+    GameForge Studios is a cyberpunk-inspired indie game collective
+    focused on building fast, immersive, and visually striking
+    pixel-based games. We blend creativity, technology, and teamwork
+    to forge experiences that stay with players long after the screen fades.
   </p>
 </section>
 
-<section id="games" class="reveal">
-  <h2>OUR GAMES</h2>
+<section id="team" class="reveal">
+  <h2>Our Team</h2>
+  <div class="team">
+    <div class="member"><span>Sai Santhosh C</span> – Lead Developer</div>
+    <div class="member"><span>Rhohesh A</span> – UI / UX</div>
+    <div class="member"><span>Balamanikandan</span> – Backend Developer</div>
+    <div class="member"><span>Sanjit V</span> – Game Designer</div>
+    <div class="member"><span>Santhosh V</span> – Frontend Developer</div>
+  </div>
+</section>
+
+<section id="projects" class="reveal">
+  <h2>Projects</h2>
 
   <div class="games">
     <div class="card">
-      <img src="https://picsum.photos/seed/neonrift/600/400">
       <h3>Neon Rift</h3>
-      <p>Action-packed pixel RPG set in a fractured neon megacity.</p>
+      <p>Pixel RPG set in a fractured neon megacity.</p>
     </div>
 
     <div class="card">
-      <img src="https://picsum.photos/seed/bytebrawl/600/400">
       <h3>Byte Brawl</h3>
-      <p>Retro cyber combat with intense multiplayer battles.</p>
+      <p>Retro cyber combat with fast-paced multiplayer action.</p>
     </div>
 
     <div class="game-center">
       <div class="card">
-        <img src="https://picsum.photos/seed/synthrunner/600/400">
         <h3>Synth Runner</h3>
-        <p>High-speed endless runner through glitching digital streets.</p>
+        <p>High-speed endless runner through glitching neon streets.</p>
       </div>
     </div>
   </div>
 </section>
 
-<section id="team" class="reveal">
-  <h2>CREATORS</h2>
-  <div class="team">
-    <span>Sai Santhosh C</span>
-    <span>Rhohesh A</span>
-    <span>Balamanikandan SS</span>
-    <span>Sanjit V</span>
-    <span>Santhosh V</span>
-
-    <p style="margin-top:40px;color:#d1d5db;line-height:2;">
-      Five creators. One shared vision.  
-      We are a team fueled by creativity, late-night debugging,
-      pixel-perfect details, and the drive to build games that
-      challenge players and push boundaries beyond the screen.
-    </p>
-  </div>
-</section>
-
-<section id="contact" class="reveal">
-  <h2>CONTACT</h2>
+<section id="contact" class="contact reveal">
+  <h2>Contact</h2>
   <p>contact@gameforgestudios.com</p>
 </section>
 
 <footer>
-  <p>© 2026 GameForge Studios — Powered by Pixels, Passion & Persistence</p>
+  <p>© 2026 GameForge Studios — Built by a Team of Five</p>
 </footer>
 
 <script>
@@ -261,4 +251,5 @@ window.addEventListener("scroll", () => {
 
 </body>
 </html>
+
 
